Closed Bug 44797 Opened 25 years ago Closed 25 years ago

Sidebar links should open a New Browser window if there are none open.

Categories

(SeaMonkey :: Sidebar, defect, P3)

x86
All
defect

Tracking

(Not tracked)

VERIFIED FIXED

People

(Reporter: jelwell, Assigned: danm.moz)

Details

(Whiteboard: [nsbeta2-][rjc][nsbeta3+])

Steps to reproduce: 1) Launch Mail/News 2) Make sure you have an open browser window. 3) Open the "Tinderbox" section of the sidebar in Mail/News. 4) Click on the link there. *watch as the Browser opens that link* Repeat with a change, this time close all mozilla windows other than Mail/News. when you click on the link in the Tinderbox section of the sidebar in Mail/News, tinderbox is loaded into one of the Mail/News panes. This is an unexpected result. Expected Result: If no browser window is open then one is opened with the link (whether that be the system default browser, or Mozilla - note: we should not assume that the Mozilla browser is even installed).
This might not look so bad in Mail/News. But in IM it's horrid, and is blocking an nsbeta2+ bugscape bug 1346. from bug 32034, information that might help: ------- Additional Comments From Robert Churchill 2000-07-07 11:54 ------- Once these fixes are checked in [and currently they are not, due to being marked nsbeta2-, as well as the fixes need to be tweaked slightly due to other tree changes such as "window.content" now being "window._content"], when a search is done from the sidebar, instead of just setting "window._content" to something, instead the window mediator is used to find the nearest browser window (or open one if there aren't any) and use that. If the active window IS a browser window, its used (so no new window in that case).
Keywords: nsbeta2
Putting on [nsbeta2+] radar for beta2 fix.
Whiteboard: [nsbeta2+]
Adding me to the status.
Whiteboard: [nsbeta2+] → [nsbeta2+][rjc]
This might be a good bug to have danm look at. Dan, if you look at the page source for http://tinderbox.mozilla.org/seamonkey/panel.html (the URL for the remote HTML of the tinderbox sidebar panel) you'll see the the anchor link has a target="_content" set in the HTML. I'd suspect that somewhere, "_content" resolution goes looking for a navigator window which it'll use if it finds it. However, if no browser windows are open, it looks like its falling back for some reason to the HTML content area in the mail/news window.
Assignee: slamm → danm
danm/rjc - in light of PDTs edict to have ETAs in bug reports, any idea when this will be fixed? thanks, Vishy.
Yes on review, I am comfortable with nsbeta2- this one. We shd fix it for RTM but can live with it in nsbeta2 in interest of hitting the schedule. thanks, Vishy
Doesn't fit latest 'would ya pull it off the wire' criteria, marking nsbeta2-, nominating for nsbeta3
Keywords: nsbeta3
Whiteboard: [nsbeta2+][rjc] → [nsbeta2-][rjc]
nsbeta3+
Whiteboard: [nsbeta2-][rjc] → [nsbeta2-][rjc][nsbeta3+]
Target Milestone: --- → M18
cc'ing slamm, me and german.
nsBrowserInstance::HandleContent now forces a new window if the target is _content.
Status: NEW → RESOLVED
Closed: 25 years ago
Resolution: --- → FIXED
I was nosing around bug 32034 and came across this one and thought I verify... alas it didn't go so well. Win98 build 2000082508, doing a search from the mail sidebar search panel opens a new browser window EVERY time AND it didn't even do my search after opening the extraneous window. I expected my existing browser window to be used and I would hope that my search doesn't get dropped on the floor. REOPENING (back-pedaling, the search not happening may be because bug 32034 isn't fixed)
Status: RESOLVED → REOPENED
Resolution: FIXED → ---
resolving as fixed. Let's not morph this into two other problems. The originial report was about opening the link in a mail window, which is still fixed. Other problems cited *may* be a side-effect fo this fix, but they are not *this* bug.
Status: REOPENED → RESOLVED
Closed: 25 years ago25 years ago
Resolution: --- → FIXED
marking verified. tested on linux build 2000082811.
Status: RESOLVED → VERIFIED
I didn't mean to muddle the issue with the search-related stuff. I reopened this bug because I didn't accept the fix. Nonetheless, the new regression is bug 50748
Product: Browser → Seamonkey
You need to log in before you can comment on or make changes to this bug.