HandleContent now forces a new window by suppressing the target name if it could be interpreted as something in parentWindow. bug 44797 r=mscott@netscape.com